--- a/AddtionalFeatures/ReceiptGenerator.html
+++ b/AddtionalFeatures/ReceiptGenerator.html
@@ -18,10 +18,10 @@
                 <label class="block mb-2">Company Name</label>
                 <input type="text" id="company-name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter company name">
             </div>
-            <div class="mb-4">
+            <!-- <div class="mb-4">
                 <label class="block mb-2">Shop Name</label>
                 <input type="text" id="shop-name" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter shop name">
-            </div>
+            </div> -->
             <div class="mb-4">
                 <label class="block mb-2">Address</label>
                 <input type="text" id="address" class="w-full p-2 bg-gray-700 border border-gray-600 rounded" placeholder="Enter address">
