Calculate Quantity calculaotr ui updated

--- a/MarketCal/Calculate-Quantity.html
+++ b/MarketCal/Calculate-Quantity.html
@@ -3,57 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../styles/styles.css">
+    <meta name="description" content="Calculate the quantity of a product you can buy based on price per kilogram and the amount you want to spend.">
+    <meta name="keywords" content="Quantity Calculator, Price per Kg, Shopping Budget, Veggie Smart">
+    <meta name="author" content="Sourav Chhimpa">
     <title>Calculate Quantity</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #1a202c; /* Dark background */
+            color: #edf2f7; /* Light text color */
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div id="Calquntity" class="calculator">
-            <h2>Calculate Quantity</h2>
-            <form id="quantityForm">
-                <div class="form-group">
-                    <label for="amountPerKg">Price (₹/kg):</label>
-                    <input type="number" id="amountPerKg" placeholder="Enter price per kg">
+    <div class="container mx-auto p-6">
+        <div id="Calquntity" class="bg-gray-800 p-6 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-semibold text-center text-green-400 mb-4">Calculate Quantity</h2>
+            <form id="quantityForm" class="space-y-4">
+                <div class="flex flex-col space-y-2">
+                    <label for="amountPerKg" class="text-lg font-medium">Price (₹/kg):</label>
+                    <input type="number" id="amountPerKg" placeholder="Enter price per kg" class="p-2 rounded border border-gray-600 bg-gray-900 text-white">
                 </div>
-                <div class="form-group">
-                    <label for="amountToSpend">Amount to Spend (₹):</label>
-                    <input type="number" id="amountToSpend" placeholder="Enter amount to spend">
+                <div class="flex flex-col space-y-2">
+                    <label for="amountToSpend" class="text-lg font-medium">Amount to Spend (₹):</label>
+                    <input type="number" id="amountToSpend" placeholder="Enter amount to spend" class="p-2 rounded border border-gray-600 bg-gray-900 text-white">
                 </div>
-                <button type="button" onclick="calculateQuantity()">Calculate Quantity</button>
+                <button type="button" onclick="calculateQuantity()" class="w-full bg-green-500 hover:bg-green-600 text-white p-2 rounded">Calculate Quantity</button>
             </form>
-            <div id="quantityResult" class="result"></div>
+            <div id="quantityResult" class="mt-4 text-xl text-center text-green-300"></div>
         </div>
-        <a href="./../index.html">
-            <div class="calculator">
-                <h2>Home</h2>             
-            </div>
-        </a>
-        <div id="documentation" class="documentation" style="margin: 10px; padding: 20px; border: 1px solid #ddd; border-radius: 12px;">
-            <h2>User Documentation for "Calculate Quantity" Calculator</h2>
-            <h3>Overview</h3>
-            <p>The "Calculate Quantity" calculator is a simple yet effective tool designed to help you determine the quantity of a product you can buy based on the price per kilogram and the amount you wish to spend. This tool is particularly useful for budgeting and shopping.</p>
-            <h3>Features</h3>
-            <ul>
+
+        <!-- Documentation Section -->
+        <div id="documentation" class="mt-6 p-6 bg-gray-700 rounded-lg">
+            <h2 class="text-2xl font-semibold text-green-300 mb-4">User Documentation for "Calculate Quantity" Calculator</h2>
+            <h3 class="text-xl font-semibold text-green-200 mb-2">Overview</h3>
+            <p class="text-base mb-4">
+                The "Calculate Quantity" calculator is a simple yet effective tool designed to help you determine the quantity of a product you can buy based on the price per kilogram and the amount you wish to spend. This tool is particularly useful for budgeting and shopping.
+            </p>
+            <h3 class="text-xl font-semibold text-green-200 mb-2">Features</h3>
+            <ul class="list-disc list-inside mb-4">
                 <li>Input field for the price per kilogram (₹/kg).</li>
                 <li>Input field for the amount you wish to spend (₹).</li>
                 <li>Displays the calculated quantity in kilograms.</li>
                 <li>Clean and responsive design using Tailwind CSS classes.</li>
             </ul>
-            <h3>How to Use the Calculator</h3>
-            <h4>Open the Calculator Page</h4>
-            <p>Navigate to the calculator page in your browser.</p>
-            <h4>Input the Price per Kilogram</h4>
-            <p>Locate the input field labeled "Price (₹/kg):". Enter the price per kilogram of the product in this field.</p>
-            <h4>Input the Amount to Spend</h4>
-            <p>Locate the input field labeled "Amount to Spend (₹):". Enter the total amount you wish to spend in this field.</p>
-            <h4>Calculate the Quantity</h4>
-            <p>Click the "Calculate Quantity" button. The calculator will process the inputs and display the quantity of the product you can buy in the result area.</p>
-            <h4>View the Result</h4>
-            <p>The calculated quantity will be displayed below the form in the result area.</p>
+            <h3 class="text-xl font-semibold text-green-200 mb-2">How to Use the Calculator</h3>
+            <h4 class="text-lg font-semibold text-green-100 mb-1">Open the Calculator Page</h4>
+            <p class="text-base mb-2">Navigate to the calculator page in your browser.</p>
+            <h4 class="text-lg font-semibold text-green-100 mb-1">Input the Price per Kilogram</h4>
+            <p class="text-base mb-2">Locate the input field labeled "Price (₹/kg):". Enter the price per kilogram of the product in this field.</p>
+            <h4 class="text-lg font-semibold text-green-100 mb-1">Input the Amount to Spend</h4>
+            <p class="text-base mb-2">Locate the input field labeled "Amount to Spend (₹):". Enter the total amount you wish to spend in this field.</p>
+            <h4 class="text-lg font-semibold text-green-100 mb-1">Calculate the Quantity</h4>
+            <p class="text-base mb-2">Click the "Calculate Quantity" button. The calculator will process the inputs and display the quantity of the product you can buy in the result area.</p>
+            <h4 class="text-lg font-semibold text-green-100 mb-1">View the Result</h4>
+            <p class="text-base">The calculated quantity will be displayed below the form in the result area.</p>
         </div>
     </div>
-    <footer id="footer"></footer>
+    <footer id="footer" class="text-center text-gray-500 mt-6"></footer>
     <script src="./../scripts/footer.js"></script>
+    <script src="./../scripts/scripts.js"></script>
 </body>
-<script src="./../scripts/scripts.js"></script>
 </html>
