--- a/MarketCal/Calculate-Price-Kg.html
+++ b/MarketCal/Calculate-Price-Kg.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #1a202c; /* Dark background */
+            background-color: #1a202c;
             color: #edf2f7; /* Light text color */
         }
     </style>
