--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
                         </div>
                     </div>
                 </a>
+                <a href="./MarketCal/Profit-Margin-Calculator.html">
+                    <div class="calbtn">
+                        <div>
+                            <img src="https://img.icons8.com/arcade/800/point-spread.png" alt="Calculator" loading="lazy">
+                        </div>
+                        <div class="btnsecondsection">
+                            <span class="btn-tagname">Free</span>
+                            <h4 class="btn-name">Profit Margin Cal</h4>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="calculator">
